--- a/flink-end-to-end-tests/pom.xml
+++ b/flink-end-to-end-tests/pom.xml
@@ -88,6 +88,7 @@ under the License.
 		<module>flink-python-test</module>
 		<module>flink-end-to-end-tests-hbase</module>
 		<module>flink-glue-schema-registry-test</module>
+		<module>flip-56</module>
 	</modules>
 
 	<dependencyManagement>
